--- a/stylesheets.css
+++ b/stylesheets.css
@@ -44,8 +44,8 @@ div {
 div img {
     display: inline-block;
     width: 250px;
-    height: 300px;
-	border-color: BurlyWood;
+    height: 270px;
+	  border-color: BurlyWood;
     border-width: 10px;
     border-style: solid;
 	
@@ -77,6 +77,19 @@ input[type=submit] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+input[type=coupon]{
+  background-color: tomato;
+  text-align: center;
+  width: 150px;
+  height: 40px;
+  cursor: pointer;
+  border: none;
+  left: 50%;
+  margin-top: -100px;
+  margin-left: 580px;
+  font-weight:bold;
 }
 
 /* When moving the mouse over the submit button, add a darker green color */
